# phishguard-env

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  env.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_api.py  test_grader.py
phishguard_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/: __init__.py  app.py
