[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phishguard-env"
version = "1.1.0"
description = "A SOC Analyst simulation environment for phishing email triage."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "openenv",
    "pydantic>=2.0,<3.0",
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "openai>=1.30,<2.0",
    "requests>=2.31,<3.0",
    "python-dotenv>=1.0,<2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[project.urls]
Homepage = "https://huggingface.co/spaces/Scalar-hackathon/Phishguard-env"
Repository = "https://github.com/Maanya-Jadhav/testing-phishguard"
